# hermes-desktop

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  README.md  README.zh-CN.md  RPC_METHODS.md  SECURITY.md  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  index.html  index.js  index.mjs  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vite.tauri.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit  pre-push
changelogs/: 0.5.0.md
docs/: SSH-TUNNEL-VPS.md  image-assets-spec.md  prd-config-screen-redesign.md
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_utils.rs  cron_utils.rs  lib.rs  memory.rs  menu.rs  model_store.rs  model_translation.rs  model_utils.rs  profiles.rs  python.rs  session_utils.rs  skill_utils.rs  soul_utils.rs  sqlite_utils.rs  ssh_tunnel.rs  tui_gateway.rs  voice_input.rs
src-tauri/src/commands/: chat.rs  config.rs  cron.rs  data.rs  kanban.rs  mod.rs  model_commands.rs  system.rs  tui.rs  utils.rs
src-tauri/tests/: security_validation.rs
tests/: buildUserContent.test.ts  connection-config-security.test.ts  constants.test.ts  hermes-api.test.ts  installer-utils.test.ts  ipc-handlers.test.ts  preload-api-surface.test.ts  remote-mode-url-and-spawn.test.ts  session-cache-sync.test.ts  sessions-delete-session.test.ts  sessions-persisted-messages.test.ts  ssh-remote.test.ts  toolset-toggle.test.ts  (+1 more)
(+306 files in other folders)
