[package]
name = "app"
version = "0.1.0"
description = "Hermes Caduceus — AI Agent Desktop"
authors = ["leriou"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri-plugin-window-state = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["macos-private-api", "test"] }
tauri-plugin-log = "2"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }
anyhow = "1.0.102"
dirs = "6.0.0"
libc = "0.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-store = "2"
chrono = "0.4.44"
# ureq removed — test_remote_connection uses curl via shell plugin
base64 = "0.22"
regex = "1.12.3"
serde_yaml = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
hermes-core = { path = "../packages/hermes-core", default-features = false }
cpal = "0.15"
whisper-rs = { version = "0.12", features = ["coreml"] }
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
